[gd_scene load_steps=17 format=2]

[ext_resource path="res://Assets/Fonts/PixelFont.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/ChoosePlayerMenu.gd" type="Script" id=2]
[ext_resource path="res://Assets/Lamp/lamp_walking_0.png" type="Texture" id=3]
[ext_resource path="res://Assets/ChooseMenu/start_button_hover.png" type="Texture" id=4]
[ext_resource path="res://Assets/ChooseMenu/Arrow.png" type="Texture" id=5]
[ext_resource path="res://Assets/Lamp/lamp walking white/highlighted_lamp_0.png" type="Texture" id=6]
[ext_resource path="res://Assets/Lamp/lamp walking white/lamp walking white-3.png.png" type="Texture" id=7]
[ext_resource path="res://Assets/Lamp/lamp walking white/highlighted_lamp_1.png" type="Texture" id=8]
[ext_resource path="res://Assets/ChooseMenu/start_button_default.png" type="Texture" id=9]
[ext_resource path="res://Assets/ChooseMenu/BackArrow_hover.png" type="Texture" id=10]
[ext_resource path="res://Assets/ChooseMenu/BackArrow_default.png" type="Texture" id=11]
[ext_resource path="res://Assets/Music/ChoosePlayer.wav" type="AudioStream" id=12]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "lamp_default",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 8 ), ExtResource( 7 ) ],
"loop": true,
"name": "lamp_walking_white",
"speed": 5.0
} ]

[sub_resource type="StreamTexture" id=2]
flags = 4
load_path = "res://.import/i_default.png-0c8cd3ddaa1248566909e15fdf09139b.stex"

[sub_resource type="DynamicFont" id=3]
size = 70
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 40
font_data = ExtResource( 1 )

[node name="ChoosePlayerMenu" type="Node"]
script = ExtResource( 2 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.690196, 0.752941, 0.952941, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Players" type="Node2D" parent="."]
position = Vector2( 32, -96 )

[node name="Lamp" type="AnimatedSprite" parent="Players"]
position = Vector2( 1240, 1032 )
scale = Vector2( 0.8, 0.8 )
frames = SubResource( 1 )
animation = "lamp_default"

[node name="ArrowLamp" type="Sprite" parent="Players"]
position = Vector2( 974, 1051 )
texture = ExtResource( 5 )

[node name="I" type="Sprite" parent="Players"]
position = Vector2( 1216, 592 )
scale = Vector2( 0.8, 0.8 )
texture = SubResource( 2 )

[node name="ArrowI" type="Sprite" parent="Players"]
position = Vector2( 974, 646 )
texture = ExtResource( 5 )

[node name="Title" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -424.0
margin_top = 248.0
margin_right = 426.0
margin_bottom = 319.0
custom_fonts/font = SubResource( 3 )
text = "CHOOSE YOUR PLAYER"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ISelector" type="Button" parent="."]
visible = false
margin_left = 1024.0
margin_top = 512.0
margin_right = 1472.0
margin_bottom = 840.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LampSelctor" type="Button" parent="."]
visible = false
margin_left = 1024.0
margin_top = 928.0
margin_right = 1472.0
margin_bottom = 1256.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -240.0
margin_top = -292.0
margin_right = 610.0
margin_bottom = 8.0
rect_scale = Vector2( 0.5, 0.5 )
texture_normal = ExtResource( 9 )
texture_hover = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExitLabel" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -360.0
margin_top = 24.0
margin_bottom = 72.0
custom_fonts/font = SubResource( 4 )
text = "Press ESC to exit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" type="TextureButton" parent="."]
margin_left = 64.0
margin_top = 48.0
margin_right = 244.0
margin_bottom = 198.0
rect_scale = Vector2( 0.5, 0.5 )
texture_normal = ExtResource( 11 )
texture_hover = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackgroundMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )
autoplay = true

[node name="SoundEffects" type="AudioStreamPlayer" parent="."]

[connection signal="pressed" from="ISelector" to="." method="_on_ISelector_pressed"]
[connection signal="pressed" from="LampSelctor" to="." method="_on_LampSelctor_pressed"]
[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_BackButton_pressed"]
